--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -38,3 +38,11 @@
     font-size: 20px;
     margin: 0px 10px 10px 23px;
 }
+._2Y8lQ1 {
+    font-size: 14px;
+    color: #2874f0;
+    font-weight: 500;
+    padding: 16px 0;
+    border-bottom: 1px solid #f0f0f0;
+    cursor: pointer;
+}
