--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
       <div class="footer-top-area ptb-50 text-center">
           <div class="container">
               <div class="row justify-content-center">
-                  <div class="col-6 col-md-4">
+                  <div class="col">
           <div class="footer-title">
             <h3>Customer Service</h3>
           </div>
@@ -18,7 +18,7 @@
             </nav>
           </div>
         </div>
-                  <div class="col-6 col-md-4">
+            <div class="col">
           <div class="footer-title">
             <h3>Policies</h3>
           </div>
@@ -30,6 +30,10 @@
               </ul>
             </nav>
           </div>
+        </div>
+        <div class="col row">
+          <div class="col-6"><img src="./assets/img/google-play.png"/></div>
+          <div class="col-6"><img src="./assets/img/app-store.png"/></div>
         </div>
               </div>
           </div>
