--- a/src/app/ship-delivery/ship-delivery.component.html
+++ b/src/app/ship-delivery/ship-delivery.component.html
@@ -6,8 +6,8 @@
 					<div class="row">
 						<div class="col-sm-12 mtb-50">
 							<div class="bg-white shadow p-0">
-								<div class="policy-title bg-Gainsboro info-title p-42">
-									<h4 class="font-weight-bold">Shipping & Delivery</h4>
+								<div class="policy-title bg-default info-title p-42">
+									<h4 class="font-weight-bold text-white">Shipping & Delivery</h4>
 								</div><!--Title End-->
 								<div class="bg-white shadow p-4">
 									<p class="text-justify"><b>What are the delivery charges?</b></p>
