--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -6,22 +6,58 @@
 					<div class="row">
 						<div class="col-sm-12 mtb-50">
 							<div class="bg-white shadow p-0">
-								<div class="policy-title bg-Gainsboro info-title p-42">
-									<h4 class="font-weight-bold">Contact Us</h4>
+								<div class="policy-title bg-default info-title p-42">
+									<h4 class="font-weight-bold text-white">Contact Us</h4>
 								</div><!--Title End--><br>
-								<h4 class="text-center">Submit a Customer Service Request</h4>
-								<div class="bg-white p-4 mx-auto d-block col-sm-8">
+				
+								<div class="bg-white p-4 mx-auto d-block col-sm-10">
+										<h4 class="text-left text-primary">How can we help you?</h4>
 									<form>
 										<p class=""><small>*Required field</small></p>
-									  <div class="form-group">
-										<label for="exampleFormControlInput1">Full Name*</label>
-										<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="please enter your name">
-									  </div>
-									   <div class="form-group">
-										<label for="exampleFormControlInput2">Email address*</label>
-										<input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
-									  </div>
-									  <div class="form-group">
+										<div class="row">
+												<div class="col">
+														<div class="form-group">
+																<label for="exampleFormControlInput1">Full Name*</label>
+																<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="please enter your name">
+																</div>
+												</div>
+												<div class="col">
+														<div class="form-group">
+																<label for="exampleFormControlInput2">Email Address*</label>
+																<input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
+																</div>
+												</div>
+										</div>
+										<div class="row">
+												<div class="col">
+														<div class="form-group">
+																<label for="exampleFormControlInput4">Order No*</label>
+																<input type="text" class="form-control" id="exampleFormControlInput4" placeholder="Enter your order number">
+																</div>
+												</div>
+												<div class="col">
+														<div class="form-group">
+																<label for="exampleFormControlInput5">Subject*</label>
+																<!--<input type="text" class="form-control" id="exampleFormControlInput5" placeholder="">-->
+																<select class="form-control"   id="exampleFormControlSelect3" style="height:55px;">
+																		<option>-Select-</option>
+																		<option>Where's my Order?</option>
+																		<option>Account Support</option>
+																		<option>Problem with my Order</option>
+																		<option>Feedback & Comments</option>
+																	</select>
+															</div>
+												</div>
+										</div>
+										<div class="row">
+												<div class="col">
+														<div class="form-group">
+																<label for="exampleFormControlTextarea6">Message</label>
+																<textarea class="form-control" id="exampleFormControlTextarea6" rows="3"></textarea>
+																</div>
+												</div>
+										</div>
+									 <!-- <div class="form-group">
 										<label for="exampleFormControlSelect3">General Question</label>
 										<select class="form-control nice-select"   id="exampleFormControlSelect3">
 										  <option>Where's my Order?</option>
@@ -29,20 +65,11 @@
 										  <option>Problem with my Order</option>
 										  <option>Feedback & Comments</option>
 										</select>
-									  </div><br><br>
-									  <div class="form-group">
-										<label for="exampleFormControlInput4">Order No*</label>
-										<input type="text" class="form-control" id="exampleFormControlInput4" placeholder="Enter your order number">
-									  </div>
-									  <div class="form-group">
-										<label for="exampleFormControlInput5">Subject* (Type your question here)</label>
-										<input type="text" class="form-control" id="exampleFormControlInput5" placeholder="">
-									  </div>
+									  </div>-->
+									 
+									 
 									  
-									  <div class="form-group">
-										<label for="exampleFormControlTextarea6">Message</label>
-										<textarea class="form-control" id="exampleFormControlTextarea6" rows="3"></textarea>
-									  </div>
+									  
 									  <button class="btn btn-primary mx-auto d-block">Submit</button>
 									</form>
 								
