--- a/src/app/my-profile/my-profile.component.css
+++ b/src/app/my-profile/my-profile.component.css
@@ -15,3 +15,12 @@ input[type="email"].input-new{
     margin-left:15px;
     height: 42px!important;
 }
+.card-header > h4 > span {
+    font-size: 18px;
+    font-weight: normal;
+}
+input[type="password"].input-new{
+    margin: 0 2%;
+    height: 47px;
+    width: 100%;
+}
