--- a/src/app/store-locator/store-locator.component.html
+++ b/src/app/store-locator/store-locator.component.html
@@ -6,8 +6,8 @@
         <div class="row">
           <div class="col-sm-12 mtb-50">
             <div class="bg-white shadow p-0">
-              <div class="policy-title bg-Gainsboro info-title p-42">
-                <h4 class="font-weight-bold">Store Locator</h4>
+              <div class="policy-title bg-default info-title p-42">
+                <h4 class="font-weight-bold text-white">Store Locator</h4>
               </div><!--Title End-->
               
             <div class="bg-white shadow p-4">
