--- a/src/styles.css
+++ b/src/styles.css
@@ -389,7 +389,7 @@ blockquote::before {
 *************************/
 input {
 	background: transparent;
-	border: 2px solid #24bddf;
+	border: 2px solid #8e9394;
 	height: 56px;
 	box-shadow: none;
 	padding-left: 10px;
@@ -754,7 +754,7 @@ Common Style CSS
     transition: background 0s ease-in-out 0s, margin-top 0s ease-in-out 0s, opacity 0s ease-in-out 0s;
 }
 .header-sticky.is-sticky {
-	background: rgba(255,255,255,.85);
+	background: rgba(255,255,255,1);
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -5526,4 +5526,33 @@ input[type="text"].input-new {
 }
 .none{
 	display:none !important;
+}
+.header-menu-area > nav > ul > li > a {
+
+    display: block;
+    font-size: 12px;
+    position: relative;
+    font-weight: 400;
+    line-height: 20px;
+    padding: 20px 0;
+    font-family: 'Montserrat',sans-serif;
+    color: #7a7a7a;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.land-owl-caro .owl-carousel.owl-drag .owl-item{
+    height:460px!important;
+}
+.land-owl-caro .owl-carousel.owl-drag .owl-item img{
+	width:120%!important;
+}
+.bg-default {
+    background: linear-gradient(90deg, rgba(242,71,111,1) 0%, rgba(245,109,93,1) 100%);
+}
+.product-add-to-cart input{
+	border:none;
+	background: rgba(0,0,0,0.03);
+	color:#333;
+	font-weight: bold;
+	cursor: pointer;
 }
